# 19-order-to-whatsapp

./: .coverage  .gitignore  CLAUDE.md  README.MD  csv_data_add.py  db.sqlite3  dev.sh  items.csv  items.numbers  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railpack.json  requirements.txt  requirements2.txt  staticfiles_issue.txt  temp.sqlite3
api/: admin.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_category_image_product.py
config/gunicorn/: dev.py
core/: settings.py  urls.py  wsgi.py
frontend/: babel.config.json  index.html  package-lock.json  package.json  prettier.config.cjs  prettier.config.ts  urls.py  views.py  vite.config.js  vite.config.ts  webpack.config.js
frontend/src/: App.css  App.tsx  constants.ts  main.tsx
staticfiles/: index-BaBzQvhV.css  index-BcOH1Ax3.js  index-Cenhej86.css  index-CwBkeLAt.js  index-DAv5slCK.js  index-DreEK0Jz.css  index.html  staticfiles.json
staticfiles/assets/: index-B0jzYzWo.css  index-BL8zAn3m.js  index-Bx-Mdg2P.css  index-C3MtxWEw.js  index-HoEeFjGK.js  index-nzMtIr7k.js  index-rfQKLbAb.js  index-tGBkRhBh.css
staticfiles/css/: index.6b4d8d6d3102.css  index.a4ee33d3db91.css  index.aac70ac3f48d.css
staticfiles/frontend/: 124.02f7a6ef37cf.js  124.fb25c5ca3ec0.js  124.js.map  139.4b78da11eef7.js  139.5637e283e54b.js  139.59b8d38c83ce.js  139.8a0a0b08db0a.js  139.9816ee9705e9.js  139.988fafd7a5e5.js  139.d87e8a681eff.js  139.js.04f34451fd51.map  139.js.7c348f88fce8.map  139.js.843fdf5784f5.map  (+341 more)
store/: admin.py  models.py  serializers.py  urls.py  views.py
(+157 files in other folders)
