[project]
name = "ecommerce"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.4.0",
    "gunicorn==22.0.0",
    "whitenoise[brotli]==6.7.0",
    "psycopg2-binary>=2.9",
    "python-dotenv==1.0.1",
    "Pillow>=10.3",
]

[dependency-groups]
dev = [
    "coverage>=7.5",
]
